tests/rosetta/out/C/brilliant-numbers.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:55Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:55Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
typedef struct {
  int (*)(int) bc;
  int next;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  list_int bc;
  int next;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_int primesUpTo(int n) {
  list_int tmp1 = {0, NULL};
  list_int sieve = tmp1;
  int i = 0;
  while (i <= n) {
    int tmp2_data[1];
    list_int tmp2 = {1, tmp2_data};
    tmp2.data[0] = 1;
    list_int tmp3 = concat_list_int(sieve, tmp2);
    sieve = tmp3;
    i = i + 1;
  }
  int p = 2;
  while (p * p <= n) {
    if (sieve.data[p]) {
      int m = p * p;
      while (m <= n) {
        sieve.data[m] = 0;
        m = m + p;
      }
    }
    p = p + 1;
  }
  list_int res = list_int_create(0);
  int x = 2;
  while (x <= n) {
    if (sieve.data[x]) {
      res = 0;
    }
    x = x + 1;
  }
  return res;
}

list_int sortInts(list_int xs) {
  list_int res = list_int_create(0);
  list_int tmp = xs;
  while (tmp.len > 0) {
    int min = tmp.data[0];
    int idx = 0;
    int i = 1;
    while (i < tmp.len) {
      if ((tmp.data[i] < min)) {
        min = tmp.data[i];
        idx = i;
      }
      i = i + 1;
    }
    res = 0;
    list_int out = list_int_create(0);
    int j = 0;
    while (j < tmp.len) {
      if (j != idx) {
        out = 0;
      }
      j = j + 1;
    }
    tmp = out;
  }
  return res;
}

const char *commatize(int n) {
  char *tmp4 = _str(n);
  const char *s = tmp4;
  int i = strlen(s) - 3;
  while (i >= 1) {
    char *tmp5 = slice_string(s, 0, i);
    char *tmp6 = concat_string(tmp5, ",");
    char *tmp7 = slice_string(s, i, strlen(s));
    char *tmp8 = concat_string(tmp6, tmp7);
    s = tmp8;
    i = i - 3;
  }
  return s;
}

int getBrilliant(int digits, int limit, int countOnly) {
  list_int brilliant = list_int_create(0);
  int count = 0;
  int pow = 1;
  int next = 999999999999999;
  int k = 1;
  while (k <= digits) {
    list_int s = list_int_create(0);
    for (int tmp9 = 0; tmp9 < primes.len; tmp9++) {
      int p = primes.data[tmp9];
      if (p >= pow * 10) {
        break;
      }
      if (p > pow) {
        s = 0;
      }
    }
    int i = 0;
    while ((i < s.len)) {
      int j = i;
      while ((j < s.len)) {
        int prod = s.data[i] * s.data[j];
        if ((prod < limit)) {
          if (countOnly) {
            count = count + 1;
          } else {
            brilliant = 0;
          }
        } else {
          if ((prod < next)) {
            next = prod;
          }
          break;
        }
        j = j + 1;
      }
      i = i + 1;
    }
    pow = pow * 10;
    k = k + 1;
  }
  if (countOnly) {
    return (tmp_item_t){.bc = count, .next = next};
  }
  return (tmp_item1_t){.bc = brilliant, .next = next};
}

int main() {
  printf("First 100 brilliant numbers:\n");
  int r = getBrilliant(2, 10000, 0);
  list_int br = sortInts(r.data["bc"]);
  list_int tmp10 = slice_list_int(br, 0, 100);
  br = tmp10;
  int i = 0;
  while (i < br.len) {
    char *tmp11 = _str(br.data[i]);
    char *tmp12 = _str(br.data[i]);
    printf("%d %s\n", tmp12(4, " ") + " ", (0) ? "true" : "false");
    if ((i + 1) % 10 == 0) {
      printf(" %s\n", (1) ? "true" : "false");
    }
    i = i + 1;
  }
  printf(" %s\n", (1) ? "true" : "false");
  int k = 1;
  while (k <= 13) {
    int limit = pow(10, k);
    int r2 = getBrilliant(k, limit, 1);
    int total = r2.data["bc"];
    int next = r2.data["next"];
    const char *climit = commatize(limit);
    const char *ctotal = commatize(total + 1);
    const char *cnext = commatize(next);
    printf("%d\n", "First >= " + climit.pad_start(18, " ") + " is " +
                       ctotal.pad_start(14, " ") +
                       " in the series: " + cnext.pad_start(18, " "));
    k = k + 1;
  }
}

int main() {
  list_int primes = primesUpTo(3200000);
  return 0;
}
